# swc-plugin-remove-console

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  post-release.yaml
src/: lib.rs  tests.rs
