[package]
name = "swc-plugin-remove-console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# <https://swc.rs/docs/plugin/publishing#advanced-improving-your-plugin>
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
serde = "1.0.200"
serde_json = "1.0.116"
swc_core = { version = "0.91.3", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
